k8s/envoy-gateway/vernemq-tcproute.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: vernemq-route
  namespace: vernemq
spec:
  parentRefs:
  - name: vernemq-gateway
    namespace: vernemq
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: my-vernemq
      port: 1883
